--- a/src/main/resources/templates/mail/certify-template.html
+++ b/src/main/resources/templates/mail/certify-template.html
@@ -22,7 +22,7 @@
                     <td style="padding-bottom: 24px">
                         <div style="width: 100%">
                             <div style="float: left; width: 118.49px; height: 32px">
-                                <img src="cid:logo" alt="PlayHive" style="width: 100%; height: 100%; object-fit: cover"/>
+                                <img src="https://media.playhive.co.kr/image/Logo.png" alt="PlayHive" style="width: 100%; height: 100%; object-fit: cover"/>
                             </div>
                             <div style="margin-left: 140px">
                                 <p style="color: #00adee; font-size: 16px; font-weight: 700; margin: 0; letter-spacing: -0.06em; line-height: 32px;">
@@ -71,7 +71,7 @@
                     <tr>
                         <td style="padding-bottom: 24px">
                             <div style="width: 148.62px; height: 40px">
-                                <img src="cid:logo" alt="PlayHive" style="width: 100%; height: 100%; object-fit: cover"/>
+                                <img src="https://media.playhive.co.kr/image/logo_white.png" alt="PlayHive" style="width: 100%; height: 100%; object-fit: cover"/>
                             </div>
                         </td>
                     </tr>
