--- a/src/main/resources/templates/mail/signup-complete-template.html
+++ b/src/main/resources/templates/mail/signup-complete-template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PlayHive 인증 메일</title>
+    <title>PlayHive 회원가입완료</title>
     <style>
         @font-face {
             font-family: "SUIT Variable";
@@ -14,18 +14,18 @@
     </style>
 </head>
 <body style="margin: 0; padding: 0; font-family: 'SUIT Variable', Arial, 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;">
-<table width="728" align="center" cellpadding="0" cellspacing="0" style="background-color: white; padding: 80px 40px 40px; box-sizing: border-box;">
+<table width="728" align="center" cellpadding="0" cellspacing="0" style="background-color: white; padding: 80px 40px 40px; box-sizing: border-box; margin: 0 auto; text-align: left;">
     <tr>
         <td>
-            <table width="648" cellpadding="0" cellspacing="0" style="margin: 0 auto">
+            <table width="648" align="center" cellpadding="0" cellspacing="0" style="margin: 0 auto;">
                 <tr>
-                    <td style="padding-bottom: 24px">
+                    <td style="padding-bottom: 24px;">
                         <table width="100%" cellpadding="0" cellspacing="0">
                             <tr>
-                                <td style="width: 118.49px; height: 32px">
+                                <td style="width: 118.49px; height: 32px;">
                                     <img src="https://media.playhive.co.kr/image/Logo.png" alt="PlayHive" style="width: 100%; height: 100%; object-fit: cover"/>
                                 </td>
-                                <td style="padding-left: 16px">
+                                <td style="padding-left: 16px;">
                                     <p style="width: 325px; height: 32px; color: #00adee; font-size: 16px; font-weight: 700; margin: 0; letter-spacing: -0.04em; line-height: 32px;">
                                         모두 함께 즐기는 클린 스포츠 커뮤니티, 플레이 하이브!
                                     </p>
@@ -36,34 +36,36 @@
                 </tr>
 
                 <tr>
-                    <td style="height: 88px; padding-bottom: 24px">
-                        <h5 style="width: 490px; font-size: 28px; font-weight: 700; line-height: 40px; color: #000; margin: 0; letter-spacing: -0.04em; padding-bottom: 8px;">
-                            플레이하이브 회원가입을 위한 이메일 인증번호
+                    <td>
+                        <h5 style="font-size: 28px; font-weight: 700; line-height: 40px; color: #000; margin: 0; letter-spacing: -0.04em; padding-bottom: 8px;">
+                            <span th:text="${email}">example@email.com</span>님
                         </h5>
-                        <p style="width: 490px; font-size: 14px; font-weight: 500; line-height: 20px; color: #424242; margin: 0;">
-                            안녕하세요. <span th:text="${email}">example@email.com</span>님,<br />
-                            5분 이내로 아래 인증번호를 입력하여 이메일 주소 인증을 완료하세요.
+                        <p style="font-size: 14px; font-weight: 500; line-height: 20px; color: #424242; margin: 0; padding-bottom: 20px;">
+                            안녕하세요? 플레이 하이브 입니다.<br />
+                            플레이 하이브 회원이 되신 것을 진심으로 환영합니다!<br />
+                            E스포츠, 축구, 야구의 커뮤니티를 통해 다양한 소통과 정보를 얻어보세요!<br />
+                            뉴스, 경기일정 등을 확인하며 건전하고 클린한 응원문화에 참여하시어 즐거운 커뮤니티 생활을 권장합니다.<br />
+                            E스포츠의 리그오브레전드 게임의 실시간 경기들을 플레이 하이브에서 시청하며 채팅을 나눌 수 있습니다.<br />
+                            <span style="display: block; padding-top: 20px;">많은 이용 부탁드리며 다시 한번 감사합니다.</span>
                         </p>
                     </td>
                 </tr>
 
                 <tr>
-                    <td>
-                        <p style="margin: 0; padding-bottom: 4px; color: #444; font-weight: 700; font-size: 20px; line-height: 36px; letter-spacing: -0.02em;">
-                            인증번호
-                        </p>
-                        <table width="100%" cellpadding="0" cellspacing="0" style="background-color: #f8fdff; margin: 0">
-                            <tr>
-                                <td style="font-size: 42px; font-weight: 900; color: #00adee; letter-spacing: -0.02em; padding: 16px;">
-                                    <span th:text="${code}">123456</span>
-                                </td>
-                            </tr>
-                        </table>
-                        <p style="margin: 0; font-size: 14px; font-weight: 500; line-height: 20px; color: #424242; padding-top: 24px;">
-                            본 메일은 발신전용으로 회신하실 경우 답변이 되지 않습니다. 자세한 사항은
-                            <a href="https://playhive.co.kr/customer" style="color: #00aaee; text-decoration: underline; text-underline-offset: 2px;">플레이하이브 고객센터</a>
-                            를 이용하세요.
-                        </p>
+                    <td style="width: 648px; padding-bottom: 24px;">
+                        <a href="https://playhive.co.kr/sign" style="display: inline-block; width: 184px; height: 48px; background-color: #00adee; color: #ffffff; font-size: 16px; font-weight: 700; text-decoration: none; text-align: center; line-height: 48px; border-radius: 5px;">
+                            플레이하이브 보러가기
+                        </a>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td style="width: 648px; font-size: 14px; font-weight: 500; line-height: 20px; color: #424242;">
+                        본 메일은 발신전용으로 회신하실 경우 답변이 되지 않습니다. 자세한 사항은
+                        <a href="https://playhive.co.kr/customer" style="color: #00aaee; text-decoration: underline; text-underline-offset: 2px;">
+                            플레이하이브 고객센터
+                        </a>
+                        를 이용하세요.
                     </td>
                 </tr>
             </table>
@@ -71,8 +73,8 @@
     </tr>
 </table>
 
-<!--푸터-->
-<table width="100%" cellpadding="0" cellspacing="0" style="background-color: #181818">
+<!-- Footer -->
+<table width="100%" cellpadding="0" cellspacing="0" style="background-color: #181818;">
     <tr>
         <td>
             <table width="728" align="center" cellpadding="0" cellspacing="0" style="background-color: #181818; margin: 0 auto; padding: 40px 40px 0; box-sizing: border-box;">
@@ -80,12 +82,12 @@
                     <td>
                         <table width="648" cellpadding="0" cellspacing="0">
                             <tr>
-                                <td style="padding-bottom: 24px">
+                                <td style="padding-bottom: 24px;">
                                     <img src="https://media.playhive.co.kr/image/logo_white.png" alt="PlayHive" style="width: 100%; height: 100%; object-fit: cover"/>
                                 </td>
                             </tr>
                             <tr>
-                                <td style="padding-bottom: 24px">
+                                <td style="padding-bottom: 24px;">
                                     <p style="font-weight: 500; font-size: 24px; line-height: 38px; letter-spacing: -0.04em; color: white; margin: 0;">
                                         열정적으로 응원하고 서로를 존중하며<br />
                                         <strong>모두 함께 즐기는 클린 스포츠 커뮤니티, 플레이 하이브!</strong>
@@ -102,9 +104,9 @@
                             </tr>
                         </table>
 
-                        <table width="648" cellpadding="0" cellspacing="0" style="margin-top: 24px; border-top: 1px solid #424242">
+                        <table width="648" cellpadding="0" cellspacing="0" style="margin-top: 24px; border-top: 1px solid #424242;">
                             <tr>
-                                <td style="height: 80px; color: #a6a6a6">
+                                <td style="height: 80px; color: #a6a6a6;">
                                     <p style="font-weight: 500; font-size: 16px; line-height: 24px; letter-spacing: -0.02em; margin: 0;">
                                         Copyright © PlayHive Co., Ltd All rights reserved.
                                     </p>
