--- a/src/main/resources/templates/mail/signup-complete-template.html
+++ b/src/main/resources/templates/mail/signup-complete-template.html
@@ -23,7 +23,9 @@
                         <table width="100%" cellpadding="0" cellspacing="0">
                             <tr>
                                 <td style="width: 118.49px; height: 32px;">
-                                    <img src="https://media.playhive.co.kr/image/Logo.png" alt="PlayHive" style="width: 100%; height: 100%; object-fit: cover"/>
+                                    <img src="https://media.playhive.co.kr/image/Logo.png"
+                                         alt="PlayHive"
+                                         style="width: 100%; height: 100%; object-fit: contain;"/>
                                 </td>
                                 <td style="padding-left: 16px;">
                                     <p style="width: 325px; height: 32px; color: #00adee; font-size: 16px; font-weight: 700; margin: 0; letter-spacing: -0.04em; line-height: 32px;">
