fix: 타임리프 css 변경

--- a/src/main/resources/templates/mail/certify-template.html
+++ b/src/main/resources/templates/mail/certify-template.html
@@ -89,7 +89,7 @@
                                 <td style="padding-bottom: 24px; width: 148.62px;">
                                     <img src="https://media.playhive.co.kr/image/logo_white.png" alt="PlayHive"
                                          width="148.62" height="40"
-                                         style="width: 148.62px; height: 40px; display: block; max-width: 148.62px; object-fit: cover;"/>
+                                         style="width: 148.62px; height: 40px; display: block; max-width: 148.62px;"/>
                                 </td>
                             </tr>
                             <tr>
