--- a/src/main/resources/templates/mail/signup-complete-template.html
+++ b/src/main/resources/templates/mail/signup-complete-template.html
@@ -85,7 +85,7 @@
                         <table width="648" cellpadding="0" cellspacing="0">
                             <tr>
                                 <td style="padding-bottom: 24px;">
-                                    <img src="https://media.playhive.co.kr/image/logo_white.png" alt="PlayHive" style="width: 100%; height: 100%; object-fit: cover"/>
+                                    <img src="https://media.playhive.co.kr/image/logo_white.png" alt="PlayHive" style="width: 148.62px; height: 40px; display: block; max-width: 148.62px;"/>
                                 </td>
                             </tr>
                             <tr>
