--- a/src/main/resources/templates/mail/temporary-password-template.html
+++ b/src/main/resources/templates/mail/temporary-password-template.html
@@ -25,7 +25,7 @@
                         <div style="width: 100%;">
                             <div style="float: left; width: 118.49px; height: 32px;">
                                 <img src="https://media.playhive.co.kr/image/Logo.png" alt="PlayHive"
-                                     style="width: 100%; height: 100%; object-fit: cover;"/>
+                                     style="width: 148.62px; height: 40px; display: block; max-width: 148.62px;"/>
                             </div>
                             <div style="margin-left: 140px;">
                                 <p style="color: #00adee; font-size: 16px; font-weight: 700; margin: 0; letter-spacing: -0.06em; line-height: 32px;">
