--- a/src/main/resources/templates/mail/certify-template.html
+++ b/src/main/resources/templates/mail/certify-template.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>PlayHive 인증 메일</title>
     <style>
         @font-face {
@@ -13,22 +14,25 @@
         }
     </style>
 </head>
-<body style="margin: 0; padding: 0; font-family: 'SUIT Variable', Arial, 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;">
-<table width="728" align="center" cellpadding="0" cellspacing="0"
-       style="background-color: white; padding: 80px 40px 40px; box-sizing: border-box;">
+
+<body
+        style="margin: 0; padding: 0; font-family: 'SUIT Variable', Arial, 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;">
+<table align="center" cellpadding="0" cellspacing="0" style="background-color: white; padding: 40px; box-sizing: border-box;"
+       width="728">
     <tr>
         <td>
-            <table width="648" cellpadding="0" cellspacing="0" style="margin: 0 auto">
+            <table cellpadding="0" cellspacing="0" style="margin: 0 auto" width="648">
                 <tr>
                     <td style="padding-bottom: 24px">
-                        <table width="100%" cellpadding="0" cellspacing="0">
+                        <table cellpadding="0" cellspacing="0" width="100%">
                             <tr>
                                 <td style="width: 118.49px; height: 32px">
-                                    <img src="https://media.playhive.co.kr/image/Logo.png" alt="PlayHive"
+                                    <img alt="PlayHive" src="https://media.playhive.co.kr/image/Logo.png"
                                          style="width: 100%; height: 100%; object-fit: cover"/>
                                 </td>
                                 <td style="padding-left: 16px">
-                                    <p style="width: 325px; height: 32px; color: #00adee; font-size: 16px; font-weight: 700; margin: 0; letter-spacing: -0.04em; line-height: 32px;">
+                                    <p
+                                            style="width: 325px; height: 32px; color: #00adee; font-size: 16px; font-weight: 700; margin: 0; letter-spacing: -0.04em; line-height: 32px;">
                                         모두 함께 즐기는 클린 스포츠 커뮤니티, 플레이 하이브!
                                     </p>
                                 </td>
@@ -39,7 +43,8 @@
 
                 <tr>
                     <td style="height: 88px; padding-bottom: 24px">
-                        <h5 style="width: 490px; font-size: 28px; font-weight: 700; line-height: 40px; color: #000; margin: 0; letter-spacing: -0.04em; padding-bottom: 8px;">
+                        <h5
+                                style="width: 490px; font-size: 28px; font-weight: 700; line-height: 40px; color: #000; margin: 0; letter-spacing: -0.04em; padding-bottom: 8px;">
                             플레이하이브 회원가입을 위한 이메일 인증번호
                         </h5>
                         <p style="width: 490px; font-size: 14px; font-weight: 500; line-height: 20px; color: #424242; margin: 0;">
@@ -51,18 +56,21 @@
 
                 <tr>
                     <td>
-                        <p style="margin: 0; padding-bottom: 4px; color: #444; font-weight: 700; font-size: 20px; line-height: 36px; letter-spacing: -0.02em;">
+                        <p
+                                style="margin: 0; padding-bottom: 4px; color: #444; font-weight: 700; font-size: 20px; line-height: 36px; letter-spacing: -0.02em;">
                             인증번호
                         </p>
-                        <table width="100%" cellpadding="0" cellspacing="0"
-                               style="background-color: #f8fdff; margin: 0">
+                        <table cellpadding="0" cellspacing="0" style="background-color: #f8fdff; margin: 0"
+                               width="100%">
                             <tr>
-                                <td style="font-size: 42px; font-weight: 900; color: #00adee; letter-spacing: -0.02em; padding: 16px;">
+                                <td
+                                        style="font-size: 42px; font-weight: 900; color: #00adee; letter-spacing: -0.02em; padding: 16px;">
                                     <span th:text="${code}">123456</span>
                                 </td>
                             </tr>
                         </table>
-                        <p style="margin: 0; font-size: 14px; font-weight: 500; line-height: 20px; color: #424242; padding-top: 24px;">
+                        <p
+                                style="margin: 0; font-size: 14px; font-weight: 500; line-height: 20px; color: #424242; padding-top: 24px;">
                             본 메일은 발신전용으로 회신하실 경우 답변이 되지 않습니다. 자세한 사항은
                             <a href="https://playhive.co.kr/customer"
                                style="color: #00aaee; text-decoration: underline; text-underline-offset: 2px;">플레이하이브
@@ -76,56 +84,58 @@
     </tr>
 </table>
 
-<!-- 푸터 -->
-<table width="100%" cellpadding="0" cellspacing="0" style="background-color: #181818;">
-    <tr>
-        <td>
-            <table width="728" align="center" cellpadding="0" cellspacing="0"
-                   style="background-color: #181818; margin: 0 auto; padding: 40px 40px 0; box-sizing: border-box;">
-                <tr>
-                    <td>
-                        <table width="648" cellpadding="0" cellspacing="0">
-                            <tr>
-                                <td style="padding-bottom: 24px; width: 148.62px;">
-                                    <img src="https://media.playhive.co.kr/image/logo_white.png" alt="PlayHive"
-                                         width="148.62" height="40"
-                                         style="width: 148.62px; height: 40px; display: block; max-width: 148.62px;"/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td style="padding-bottom: 24px;">
-                                    <p style="font-weight: 500; font-size: 24px; line-height: 38px; letter-spacing: -0.04em; color: white; margin: 0;">
-                                        열정적으로 응원하고 서로를 존중하며<br/>
-                                        <strong>모두 함께 즐기는 클린 스포츠 커뮤니티, 플레이 하이브!</strong>
-                                    </p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <p style="font-weight: 500; font-size: 16px; line-height: 24px; letter-spacing: -0.02em; color: #a6a6a6; margin: 0;">
-                                        서비스명: PlayHive · 대표: 홍길표 · 개인정보 보호책임자: 홍길표<br/>
-                                        콘텐츠 내용에 대한 저작권 및 법적 책임은 자료제공자 또는 글쓴이에 있으며 PlayHive의 입장과 다를 수 있습니다.
-                                    </p>
-                                </td>
-                            </tr>
-                        </table>
+<!-- footer -->
+<div style="width: 100%; background-color: #000;">
+    <table align="center" cellpadding="0" cellspacing="0" style="background-color: #000; padding: 40px 40px 0;"
+           width="728">
+        <tr>
+            <td>
+                <table cellpadding="0" cellspacing="0" width="648">
+                    <tr>
+                        <td style="padding-bottom: 24px;">
+                            <div style="width: 148.62px; height: 40px;">
+                                <img alt="PlayHive" src="https://media.playhive.co.kr/image/logo_white.png"
+                                     style="width: 100%; height: 100%; object-fit: cover;"/>
+                            </div>
+                        </td>
+                    </tr>
 
-                        <table width="648" cellpadding="0" cellspacing="0"
-                               style="margin-top: 24px; border-top: 1px solid #424242;">
-                            <tr>
-                                <td style="height: 80px; color: #a6a6a6;">
-                                    <p style="font-weight: 500; font-size: 16px; line-height: 24px; letter-spacing: -0.02em; margin: 0;">
-                                        Copyright © PlayHive Co., Ltd All rights reserved.
-                                    </p>
-                                </td>
-                            </tr>
-                        </table>
+                    <tr>
+                        <td>
+                            <p
+                                    style="font-weight: 500; font-size: 24px; line-height: 38px; letter-spacing: -0.04em; color: white; margin: 0;">
+                                열정적으로 응원하고 서로를 존중하며<br/>
+                                <span style="font-weight: 700;">
+                    모두 함께 즐기는 클린 스포츠 커뮤니티, 플레이 하이브!
+                  </span>
+                            </p>
+                        </td>
+                    </tr>
 
-                    </td>
-                </tr>
-            </table>
-        </td>
-    </tr>
-</table>
+                    <tr>
+                        <td style="padding-top: 24px;">
+                            <p
+                                    style="font-weight: 500; font-size: 16px; line-height: 24px; letter-spacing: -0.02em; color: #a6a6a6; margin: 0;">
+                                서비스명: PlayHive · 대표: 홍길표 · 개인정보 보호책임자: 홍길표<br/>
+                                콘텐츠 내용에 대한 저작권 및 법적 책임은 자료제공자 또는 글쓴이에 있으며 PlayHive의 입장과 다를 수 있습니다.
+                            </p>
+                        </td>
+                    </tr>
+                </table>
+                <table cellpadding="0" cellspacing="0" style="margin-top: 24px; border-top: 1px solid #424242;"
+                       width="648">
+                    <tr>
+                        <td style="height: 80px; color: #a6a6a6;">
+                            <p style="font-weight: 500; font-size: 16px; line-height: 24px; letter-spacing: -0.02em; margin: 0;">
+                                Copyright © PlayHive Co., Ltd All rights reserved.
+                            </p>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+</div>
 </body>
+
 </html>
