--- a/src/main/resources/templates/mail/temporary-password-template.html
+++ b/src/main/resources/templates/mail/temporary-password-template.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>PlayHive 임시비밀번호</title>
     <style>
         @font-face {
@@ -14,33 +15,37 @@
     </style>
 </head>
 
-<body style="margin: 0; padding: 0; font-family: 'SUIT Variable', Arial, 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;">
-<table width="728" align="center" cellpadding="0" cellspacing="0"
-       style="background-color: white; padding: 80px 40px 40px; box-sizing: border-box;">
+<body
+        style="margin: 0; padding: 0; font-family: 'SUIT Variable', Arial, 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;">
+<table align="center" cellpadding="0" cellspacing="0" style="background-color: white; padding: 40px; box-sizing: border-box;"
+       width="728">
     <tr>
         <td>
-            <table width="648" align="center" cellpadding="0" cellspacing="0" style="margin: 0 auto;">
+            <table align="center" cellpadding="0" cellspacing="0" style="margin: 0 auto;" width="648">
                 <tr>
-                    <td style="padding-bottom: 24px;">
-                        <div style="width: 100%;">
-                            <div style="float: left; width: 118.49px; height: 32px;">
-                                <img src="https://media.playhive.co.kr/image/Logo.png" alt="PlayHive"
-                                     style="width: 148.62px; height: 40px; display: block; max-width: 148.62px;"/>
-                            </div>
-                            <div style="margin-left: 140px;">
-                                <p style="color: #00adee; font-size: 16px; font-weight: 700; margin: 0; letter-spacing: -0.06em; line-height: 32px;">
-                                    모두 함께 즐기는 클린 스포츠 커뮤니티, 플레이 하이브!
-                                </p>
-                            </div>
-                            <div style="clear: both;"></div>
-                        </div>
+                    <td style="padding-bottom: 24px">
+                        <table cellpadding="0" cellspacing="0" width="100%">
+                            <tr>
+                                <td style="width: 118.49px; height: 32px">
+                                    <img alt="PlayHive 로고 이미지" src="https://media.playhive.co.kr/image/Logo.png"
+                                         style="width: 100%; height: 100%; object-fit: cover"/>
+                                </td>
+                                <td style="padding-left: 16px">
+                                    <p
+                                            style="width: 325px; height: 32px; color: #00adee; font-size: 16px; font-weight: 700; margin: 0; letter-spacing: -0.04em; line-height: 32px;">
+                                        모두 함께 즐기는 클린 스포츠 커뮤니티, 플레이 하이브!
+                                    </p>
+                                </td>
+                            </tr>
+                        </table>
                     </td>
                 </tr>
 
                 <tr>
                     <td style="padding-bottom: 24px;">
-                        <h5 style="font-size: 28px; font-weight: 700; line-height: 40px; color: #000; margin: 0; letter-spacing: -0.04em;">
-                            <span th:text="${email}">example@email.com</span>님
+                        <h5
+                                style="font-size: 28px; font-weight: 700; line-height: 40px; color: #000; margin: 0; letter-spacing: -0.04em;">
+                            <span th:text="${nickname}">익명의 유저</span>&nbsp;회원님
                         </h5>
                         <p style="font-size: 14px; font-weight: 500; line-height: 20px; color: #424242; margin: 8px 0 0;">
                             안녕하세요? 플레이 하이브 입니다. 회원님의 임시 비밀번호를 확인해주세요.<br/>
@@ -53,11 +58,12 @@
                 <tr>
                     <td style="width: 648px; padding: 8px 16px; background-color: #fafafa; color: #424242;">
                         <p style="margin: 0; font-size: 20px; font-weight: 700; line-height: 36px; letter-spacing: -0.02em;">
-                <span style="margin: 0 16px 4px 0; font-size: 20px; font-weight: 500; line-height: 36px; letter-spacing: -0.02em; color: #444;">
+                <span
+                        style="margin: 0 16px 4px 0; font-size: 20px; font-weight: 500; line-height: 36px; letter-spacing: -0.02em; color: #444;">
                   임시 비밀번호
                 </span>
-                            <span th:text="${password}"
-                                  style="font-weight: 700; font-size: 20px; line-height: 36px; letter-spacing: -0.02em;">
+                            <span style="font-weight: 700; font-size: 20px; line-height: 36px; letter-spacing: -0.02em;"
+                                  th:text="${password}">
                   tempPassword123
                 </span>
                         </p>
@@ -83,7 +89,8 @@
     </tr>
 
     <tr>
-        <td style="width: 648px; font-size: 14px; font-weight: 500; line-height: 20px; color: #424242; letter-spacing: -0.02em;">
+        <td
+                style="width: 648px; font-size: 14px; font-weight: 500; line-height: 20px; color: #424242; letter-spacing: -0.02em;">
             본 메일은 발신전용으로 회신하실 경우 답변이 되지 않습니다. 자세한 사항은
             <a href="https://playhive.co.kr/customer" style="color: #00aaee; text-decoration: underline;">
                 플레이하이브 고객센터
@@ -92,16 +99,17 @@
     </tr>
 </table>
 
+<!-- footer -->
 <div style="width: 100%; background-color: #000;">
-    <table width="728" align="center" cellpadding="0" cellspacing="0"
-           style="background-color: #000; padding: 40px 40px 0;">
+    <table align="center" cellpadding="0" cellspacing="0" style="background-color: #000; padding: 40px 40px 0;"
+           width="728">
         <tr>
             <td>
-                <table width="648" cellpadding="0" cellspacing="0">
+                <table cellpadding="0" cellspacing="0" width="648">
                     <tr>
                         <td style="padding-bottom: 24px;">
                             <div style="width: 148.62px; height: 40px;">
-                                <img src="https://media.playhive.co.kr/image/logo_white.png" alt="PlayHive"
+                                <img alt="PlayHive" src="https://media.playhive.co.kr/image/logo_white.png"
                                      style="width: 100%; height: 100%; object-fit: cover;"/>
                             </div>
                         </td>
@@ -109,7 +117,8 @@
 
                     <tr>
                         <td>
-                            <p style="font-weight: 500; font-size: 24px; line-height: 38px; letter-spacing: -0.04em; color: white; margin: 0;">
+                            <p
+                                    style="font-weight: 500; font-size: 24px; line-height: 38px; letter-spacing: -0.04em; color: white; margin: 0;">
                                 열정적으로 응원하고 서로를 존중하며<br/>
                                 <span style="font-weight: 700;">
                     모두 함께 즐기는 클린 스포츠 커뮤니티, 플레이 하이브!
@@ -120,16 +129,16 @@
 
                     <tr>
                         <td style="padding-top: 24px;">
-                            <p style="font-weight: 500; font-size: 16px; line-height: 24px; letter-spacing: -0.02em; color: #a6a6a6; margin: 0;">
+                            <p
+                                    style="font-weight: 500; font-size: 16px; line-height: 24px; letter-spacing: -0.02em; color: #a6a6a6; margin: 0;">
                                 서비스명: PlayHive · 대표: 홍길표 · 개인정보 보호책임자: 홍길표<br/>
                                 콘텐츠 내용에 대한 저작권 및 법적 책임은 자료제공자 또는 글쓴이에 있으며 PlayHive의 입장과 다를 수 있습니다.
                             </p>
                         </td>
                     </tr>
                 </table>
-
-                <table width="648" cellpadding="0" cellspacing="0"
-                       style="margin-top: 24px; border-top: 1px solid #424242;">
+                <table cellpadding="0" cellspacing="0" style="margin-top: 24px; border-top: 1px solid #424242;"
+                       width="648">
                     <tr>
                         <td style="height: 80px; color: #a6a6a6;">
                             <p style="font-weight: 500; font-size: 16px; line-height: 24px; letter-spacing: -0.02em; margin: 0;">
@@ -138,10 +147,10 @@
                         </td>
                     </tr>
                 </table>
-
             </td>
         </tr>
     </table>
 </div>
 </body>
+
 </html>
